Subiendo proyecto a nueva rama

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=
+DB_PASSWORD=          # ← Este nombre debe coincidir con DB_PASSWORD
 DB_NAME=tareas_db
-JWT_SECRET=
+JWT_SECRET=ooEqgQsgsIPKtO2kqoGtcYLc0hFqrw5J
